[package]
name = "polyprice"
version = "0.1.0"
edition = "2024"
description = "A price comparison tool"
license = "MPL-2.0"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio = { version = "1", features = ["full"] }
yahoo_finance_api = "4"
